--- a/index.html
+++ b/index.html
@@ -3,10 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://meyerweb.com/eric/tools/css/reset/reset.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>results design</title>
   </head>
   <body>
-    <h1>test</h1>
+    <main>
+      <section>
+        <p>Your Results</p>
+        <div>
+          <h3>76</h3>
+          <h4>of 100</h4>
+        </div>
+        <h2>Great</h2>
+        <p>
+          You scored higher than 65% of the people who have taken these tests
+        </p>
+      </section>
+      <section>
+        <h1>summary</h1>
+        <ul>
+          <li>
+            <img src="/icon-memory.svg" alt="" />
+            <p>Reaction</p>
+            <p><strong>80</strong>/100</p>
+          </li>
+          <li>
+            <img src="/icon-memory.svg" alt="" />
+            <p>Memory</p>
+            <p><strong>92</strong>/100</p>
+          </li>
+          <li>
+            <img src="/icon-verbal.svg" alt="" />
+            <p>Verbal</p>
+            <p><strong>61</strong>/100</p>
+          </li>
+          <li>
+            <img src="/icon-visual.svg" alt="" />
+            <p>Visual</p>
+            <p><strong>72</strong>/100</p>
+          </li>
+        </ul>
+        <a href="#">Continue</a>
+      </section>
+    </main>
   </body>
 </html>
