--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>results design</title>
+    <script src="main.js" type="module"></script>
   </head>
   <body>
     <main>
